--- a/css/app.css
+++ b/css/app.css
@@ -1,58 +1,122 @@
 /* colors */
 
 :root {
-    --primary: #80cbc4;
-    --secondary: #00695c;
-    --title: #e0f2f1;
-  }
-  
-  /* layout styles */
-  nav {
-    background: var(--primary);
-    border-bottom: 10px solid var(--secondary);
-  }
-  nav a {
-    text-transform: uppercase;
-    color: var(--title);
-  }
-  nav a span {
-    font-weight: bold;
-  }
-  nav .sidenav-trigger {
-    margin: 0;
-  }
-  
-  .circle-list {
-    list-style-type: circle;
-  } 
-  /* review styles */
-  .review {
-    margin-top: 20px;
-  }
+  --primary: #80cbc4;
+  --secondary: #00695c;
+  --title: #e0f2f1;
+}
 
-  .review-details {
-    grid-area: details;
-    margin-top: 6px;
-  }
-  .review-delete {
-    grid-area: delete;
-    position: absolute;
-    bottom: 0px;
-    right: 0px;
-  }
+/* nav layout styles */
+nav {
+  background: var(--primary);
+  border-bottom: 10px solid var(--secondary);
+}
+nav a {
+  text-transform: uppercase;
+  color: var(--title);
+}
+nav a span {
+  font-weight: bold;
+}
+nav .sidenav-trigger {
+  margin: 0;
+}
 
-  /* form-styles */
-  .add-btn {
-    background: var(--title) !important;
-  }
-  input {
-    box-shadow: none !important;
-    -webkit-box-shadow: none !important;
-  }
-  .side-form button {
-    background: var(--title);
-    box-shadow: 1px 1px 3px rgba(90, 90, 90, 0.2);
-  }
-  form .input-field {
-    margin-top: 30px;
-  }
+.circle-list {
+  list-style-type: circle;
+} 
+
+/* review styles */
+.review {
+  margin-top: 20px;
+}
+
+.review-detail {
+  margin-top: 6px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.review-detail img {
+  margin-right: 15px;
+}
+.review-title {
+  font-size: 1.2rem; 
+  font-weight: bold;
+}
+.review-description {
+  font-size: 1rem; 
+}
+
+.review-delete {
+    margin-left: auto;
+}
+
+.review-delete:hover i {
+  color: red;
+}
+
+.review-delete:active i {
+    color: red;
+}
+
+
+/* form-styles */
+.add-btn {
+  background: var(--title) !important;
+}
+input {
+  box-shadow: none !important;
+  -webkit-box-shadow: none !important;
+}
+.side-form button {
+  background: var(--title);
+  box-shadow: 1px 1px 3px rgba(90, 90, 90, 0.2);
+}
+form .input-field {
+  margin-top: 30px;
+}
+
+/*Adjustments to screen sizes*/
+
+.container {
+  max-width: 100%;
+}
+
+.container h2 {
+  font-size: 2.5rem;
+}
+
+.container img {
+  max-width: 100%;
+  height: auto;
+}
+
+.container p {
+  font-size: 1rem;
+}
+
+.container a.btn {
+  margin-top: 20px;
+}
+
+h2 {
+font-size: 3rem;
+}
+
+
+@media only screen and (max-width: 600px) {
+h2 {
+    font-size: 2rem;
+}
+}
+
+.nav-wrapper .brand-logo {
+font-size: 2rem;
+}
+
+@media only screen and (max-width: 600px) {
+.nav-wrapper .brand-logo {
+    font-size: 1rem;
+}
+}
