subscribtion push notification active

--- a/css/app.css
+++ b/css/app.css
@@ -25,6 +25,9 @@ nav .sidenav-trigger {
 .circle-list {
   list-style-type: circle;
 } 
+.yellow-button {
+  background-color: yellow;
+}
 
 /* review styles */
 .review {
